cabal-version: 2.4
name:          numhask-hmatrix
version:       0.0.1
synopsis:
  hmatrix bindings to numhask-array
description:
  hmatrix bindings to numhask-array.
category:
  project
homepage:
  https://github.com/tonyday567/numhask-hmatrix#readme
bug-reports:
  https://github.com/tonyday567/numhask-hmatrix/issues
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
license:
  BSD-3-Clause
license-file:
  LICENSE
tested-with:
  GHC==8.10.1
build-type:
  Simple
extra-source-files:
  readme.md
  stack.yaml
source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/numhask-hmatrix
library
  hs-source-dirs:
    src
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie
  build-depends:
    base >=4.11 && <5,
    adjunctions >=4.0 && <5,
    deepseq >=1.4.2.0 && <2,
    distributive >=0.4 && <0.7,
    numhask ^>= 0.8.1,
    numhask-array ^>= 0.9,
    vector >=0.10 && <0.13,
    hmatrix >= 0.20 && < 0.21
  exposed-modules:
    NumHask.Array.HMatrix
  default-language: Haskell2010
